[package]
name = "bf-rs"
version = "0.1.0"
authors = ["LordMZTE <lord@mzte.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
clap = "2.33.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
